--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ h1{font-size:34px;margin:8px 0} p{font-size:18px;margin:8px 0}
 
   <div class="gift">
     <div class="gift-box" id="giftBox">🎁</div>
-    <div class="reveal" id="revealMsg">Jindagi bhar tumhara saath, I love you so much ❤️</div>
+    <div class="reveal" id="revealMsg">Jindagi bhar tumhara saath dunga, I love you so much ❤️</div>
   </div>
 
 </div>
